<resources>
    <string name="app_name">Fluffie</string>

    <string name="txt_1">Your place for more\nskincare product\ntransparency</string>
    <string name="txt_2">Explore the largest community\nof skincare product summaries\nand reviews.</string>
    <string name="txt_3">Sign up with Phone Number</string>
    <string name="txt_4">Login</string>
    <string name="txt_5">Log in using password</string>
    <string name="txt_6">Phone number</string>
    <string name="txt_7">Enter phone number</string>
    <string name="txt_8">Enter verification code</string>
    <string name="txt_9">Resend</string>
    <string name="txt_10">By logging in you agree to our Terms of Use and Privacy Policy.</string>
    <string name="txt_11">Log in</string>
    <string name="txt_12">Having trouble logging in?</string>
    <string name="txt_13">Get code</string>
    <string name="txt_14">Log in using phone number</string>
    <string name="txt_15">Enter password</string>
    <string name="txt_16">Reset Password</string>
    <string name="txt_17">Submit</string>
    <string name="txt_18">Create an account 😊</string>
    <string name="txt_19">Full name</string>
    <string name="txt_20">Enter full name</string>
    <string name="txt_21">Sign up</string>
    <string name="txt_22">Terms of use</string>
    <string name="txt_23">By using this app you agree to the following conditions:</string>
    <string name="txt_24">1) You won\'t use our app maliciously in any way, shape or form.\n2) The reproduction and use of content on Fluffie will not be prohibited across any other website or platform apart from Fluffie.</string>
    <string name="txt_25">Agree</string>
    <string name="txt_26">Disagree</string>
    <string name="txt_27">Just need a few details\nabout you ✌️</string>
    <string name="txt_28">Next</string>
    <string name="txt_29">This will allow you to filter through product reviews and summaries much faster.</string>
    <string name="txt_30">Female</string>
    <string name="txt_31">Male</string>
    <string name="txt_32">Non-binary</string>
    <string name="txt_33">Date of birth</string>
    <string name="txt_34">What shade best matches your\nskin tone?</string>
    <string name="txt_35">Finish</string>
    <string name="txt_36">Last step to personalise\nyour experience!</string>
    <string name="txt_37">Do you know your skin type?</string>
    <string name="txt_38">🪔 Oily</string>
    <string name="txt_39">🌵 Dry</string>
    <string name="txt_40">👌 Normal</string>
    <string name="txt_41">😰 Sensitive</string>
    <string name="txt_42">🤝 Combination</string>
    <string name="txt_43">🤔 Not sure</string>
    <string name="txt_44">What\'s your number one concern right now?</string>
    <string name="txt_45">🌵 Dryness</string>
    <string name="txt_46">💀 Dullness</string>
    <string name="txt_47">👵 Fine lines &amp; wrinkles</string>
    <string name="txt_48">😞 Acne &amp; pimples</string>
    <string name="txt_49">☀️ Sun damage &amp; pigmentation</string>
    <string name="txt_50">🔴 Redness &amp; irritation</string>
    <string name="txt_51">⚫ Dark eye circles</string>
    <string name="txt_52">🐡 Puffiness</string>
    <string name="txt_53">Create a password</string>
    <string name="txt_54">Repeat password</string>
    <string name="txt_55">Passwords don\'t match.</string>
    <string name="txt_56">Reset</string>
    <string name="txt_57">We found 336 moisturisers that have the most reviews that mention reduced fine lines, good for dry skin and hydrated skin.</string>
    <string name="txt_58">Product categories</string>
    <string name="txt_59">Moisturisers</string>
    <string name="txt_60">Treatments</string>
    <string name="txt_61">Cleansers</string>
    <string name="txt_62">Sunscreens</string>
    <string name="txt_63">Masks</string>
    <string name="txt_64">Lip Care</string>
    <string name="txt_65">Makeup</string>
    <string name="txt_66">Devices</string>
    <string name="txt_67">Other</string>
    <string name="txt_68">Show moisturisers</string>
    <string name="txt_69">Product filters</string>
    <string name="txt_70">Clear all</string>
    <string name="txt_71">Show 9556 products</string>
    <string name="txt_72">Price range</string>
    <string name="txt_73">Benefits</string>
    <string name="txt_74">Select all</string>
    <string name="txt_75">Review sources</string>
    <string name="txt_76">We found 812 skincare products that have the most reviews mentioning benefits of reduced wrinkles, good for dry skin and hydrated skin.</string>
    <string name="txt_77">• Nourishing\n• Reduces fine lines &amp; wrinkles\n• Reduces hyperpigmentation\n• Increases skin brightness\n• Evens skin tone\n• Smooths skin texture\n• Comforting</string>
    <string name="txt_78">Positive reviews mainly mention brighter, smoother softer, moisturised and clearer skin. Negative reviews mention breakouts, irritation, dried, peeling and sensitive skin.</string>
    <string name="txt_79">With long term use, reviewers mention brighter and smoother skin, and also reduced wrinkles. Negative reviews mostly mention dried and sensitive skin.</string>
    <string name="txt_80">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="txt_81">Powered by Fluffie\'s AI© ❤️</string>
    <string name="txt_82">Server error was occurred</string>
    <string name="txt_83">Yes</string>
    <string name="txt_84">No</string>

</resources>